--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       border-bottom: 1px solid #e0d7c2;
       padding: 8px 12px;
     }
+　　/* ← これが重要！ */
+  section {
+    margin-bottom: 24px;
+    padding: 12px 12px 10px;
+    border-radius: 10px;
+    background: #ffffff;
+    border: 1px solid #eee0c8;
+    scroll-margin-top: 80px; /* ← ヘッダーの高さに合わせて調整 */
+  }
+
+    
     header h1 {
       font-size: 18px;
       margin: 0 0 4px 0;
