--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>ものづくり教室 2日間 進行台本（先生用）</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8" />
+<title>ものづくり教室 2日間 進行台本（先生用）</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <style>
-    :root {
-      --header-h: 90px; /* stickyヘッダーの実高さに合わせて調整 */
-    }
+<style>
+  /* ================================
+     基本設定
+  ================================= */
+  body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    line-height: 1.6;
+    background: #faf7f2;
+    color: #333;
+    font-size: 16px;
+  }
 
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      line-height: 1.6;
-      background: #faf7f2;
-      color: #333;
-      font-size: 16px;
-    }
-
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      background: #ff
+  /* ★ アンカー補正（JSで上書きされる） */
+  html {
+    scroll-paddin
