--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       border-bottom: 1px solid #e0d7c2;
       padding: 8px 12px;
     }
+    .header-title h1 {
+  font-size: 15px;
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.header-title h1 small {
+  font-size: 11px;
+  font-weight: normal;
+}
     .header-top {
       display: flex;
       justify-content: space-between;
@@ -190,7 +201,7 @@
 <header id="top">
   <div class="header-top">
     <div class="header-title">
-      <h1>ものづくり教室 進行台本（メイン指導員用）</h1>
+      <h1>ものづくり教室 進行台本<small>（メイン指導員用）</small></h1>
     </div>
   </div>
   <nav>
