--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ものづくり教室 2日間 進行台本（先生用）</title>
+  <title>ものづくり教室 2日間 進行台本（メイン指導員用）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -20,7 +20,6 @@
       background: #fff7dd;
       border-bottom: 1px solid #e0d7c2;
       padding: 8px 12px;
-      margin-bottom: 60px;
     }
     .header-top {
       display: flex;
@@ -37,15 +36,11 @@
       min-width: 0;
     }
     .header-title h1 {
-      font-size: 24px;
+      font-size: 22px;
       margin: 0;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-    }
-    .header-title h1 small {
-      font-size: 15px;
-      font-weight: normal;
     }
     nav {
       display: flex;
@@ -195,7 +190,7 @@
 <header id="top">
   <div class="header-top">
     <div class="header-title">
-      <h1>ものづくり教室 進行台本<small>（メイン指導員用）</small></h1>
+      <h1>ものづくり教室 進行台本（メイン指導員用）</h1>
     </div>
   </div>
   <nav>
@@ -204,12 +199,12 @@
     <a href="#day1-10-35">電気のしくみ</a>
     <a href="#day1-35-55">チェッカー</a>
     <a href="#day1-55-85">電池BOX</a>
-    <a href="#day1-85-110">名付け&まとめ</a>
+    <a href="#day1-85-110">名付け＆まとめ</a>
     <a href="#day2">2日目 全体</a>
     <a href="#day2-0-10">2日目 おさらい</a>
     <a href="#day2-10-55">スイッチ</a>
     <a href="#day2-55-90">車体づくり</a>
-    <a href="#day2-90-110">初走行&締め</a>
+    <a href="#day2-90-110">初走行＆締め</a>
     
     <div class="font-controls-nav">
       <span class="font-label">文字:</span>
@@ -233,7 +228,7 @@
       ・「心臓部」である電池BOXを自分の手で完成させる
     </div>
     <div class="pill-row">
-      <span>導入 10分</span><span>電気の基本 25分</span><span>チェッカー 20分</span><span>電池BOX 30分</span><span>名付け&まとめ 25分</span>
+      <span>導入 10分</span><span>電気の基本 25分</span><span>チェッカー 20分</span><span>電池BOX 30分</span><span>名付け＆まとめ 25分</span>
     </div>
   </section>
 
@@ -289,7 +284,7 @@
 
     <div class="say">
       <span class="label">先生</span>
-      「もし光らなかったら、"つなぎ向きが逆かな？"と考えてみましょう。<br />
+      「もし光らなかったら、"つなぐ向きが逆かな？"と考えてみましょう。<br />
       ただの失敗ではなく、"ヒント"です。」
     </div>
 
@@ -374,7 +369,7 @@
     <div class="say">
       <span class="label">先生</span>
       「ここで、この道具に名前をつけましょう。<br />
-      もとの名前は"LED＋電池プラマイ判定機"…ちょっと長くて、かっこよくありませんね。」
+      もとの名前は"LED＝電池プラマイ判定機"...ちょっと長くて、かっこよくありませんね。」
     </div>
 
     <div class="say">
@@ -403,7 +398,7 @@
       ・自分だけの車体を作り、初走行で達成感を味わう
     </div>
     <div class="pill-row">
-      <span>おさらい 10分</span><span>スイッチ 45分</span><span>車体 35分</span><span>初走行&締め 20分</span>
+      <span>おさらい 10分</span><span>スイッチ 45分</span><span>車体 35分</span><span>初走行＆締め 20分</span>
     </div>
   </section>
 
@@ -466,7 +461,7 @@
 
     <div class="note">
       ※時間が押しそうなとき：<br />
-      ・細かな見た目よりも、「ボタンを押すと光り方が変わる」状態を優先する、と一言添える。
+      ・細かな見た目よりも「ボタンを押すと光り方が変わる」状態を優先する、と一言添える。
     </div>
 
     <div class="link-top"><a href="#day2">▲ 2日目の概要へ</a>　/　<a href="#top">▲ 上へ戻る</a></div>
@@ -507,7 +502,7 @@
 
   <!-- 2日目 90-110 -->
   <section id="day2-90-110">
-    <h3>2日目 90〜110分：初走行テスト&エンディング</h3>
+    <h3>2日目 90〜110分：初走行テスト＆エンディング</h3>
     <div class="time-block">目安：20分</div>
 
     <div class="say">
