--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       min-width: 0;
     }
     .header-title h1 {
-      font-size: 22px;
+      font-size: 16px;
       margin: 0;
       white-space: nowrap;
       overflow: hidden;
@@ -190,7 +190,7 @@
 <header id="top">
   <div class="header-top">
     <div class="header-title">
-      <h1>ものづくり教室 進行台本（メイン指導員用）</h1>
+      <h1>ものづくり教室 進行台本（メイン指導員）</h1>
     </div>
   </div>
   <nav>
