--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ものづくり教室 2日間 進行台本（メイン指導員用）</title>
+  <title>リモコンカー 進行台本（メイン指導員用）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -36,7 +36,7 @@
       min-width: 0;
     }
     .header-title h1 {
-      font-size: 26px;
+      font-size: 16px;
       margin: 0;
       white-space: nowrap;
       overflow: hidden;
@@ -190,7 +190,7 @@
 <header id="top">
   <div class="header-top">
     <div class="header-title">
-      <h1>ものづくり教室 進行台本（メイン指導員）</h1>
+      <h1>リモコンカー 進行台本（メイン指導員用）</h1>
     </div>
   </div>
   <nav>
