--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ものづくり教室 2日間 進行台本（先生用）</title>
+  <title>リモコンカー 進行台本（メイン指導員用）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -195,7 +195,7 @@
 <header id="top">
   <div class="header-top">
     <div class="header-title">
-      <h1>ものづくり教室 進行台本<small>（メイン指導員用）</small></h1>
+      <h1>リモコンカー 進行台本<small>（メイン指導員用）</small></h1>
     </div>
   </div>
   <nav>
