--- a/index.html
+++ b/index.html
@@ -238,20 +238,20 @@
     <div class="time-block">目安：10分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「みなさん、ようこそ。ものづくり教室をはじめます。<br />
       まずは席について、班の4人がそろうのを待ちましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「4人そろった班から、静かに左のドアから外に出て、<br />
       自分の道具箱とカッターマットを取りに行きます。<br />
       取れたら、席に戻ってください。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「席に戻れた班は、次に材料を受け取りましょう。<br />
       机の上の見本とプリントを見て、今日のミッションを軽く確認します。」
     </div>
@@ -265,25 +265,25 @@
     <div class="time-block">目安：25分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「今日はまず、"電気ってなに？"から始めます。<br />
       電気には、水の流れのように"向き"があります。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「LEDという小さなライトは、この"向き"が合うと光ります。<br />
       逆向きだと、光りません。今から実際に見てみましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「LEDの足の長さを見てください。<br />
       長いほうがプラス、短いほうがマイナスです。ここが大事なポイントです。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「もし光らなかったら、"つなぐ向きが逆かな？"と考えてみましょう。<br />
       ただの失敗ではなく、"ヒント"です。」
     </div>
@@ -297,20 +297,20 @@
     <div class="time-block">目安：20分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「ここからは"マジックチェッカー"の時間です。<br />
       LEDを電池につないで、どんな色で光るか見てみましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「赤く光いたら電気は"右向き"。<br />
       緑に光いたら電気は"左向き"。<br />
       電気の向きが"見える"って、おもしろいですね。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「班で交代しながら、全員が試せるようにしましょう。<br />
       わからないときは、班の仲間と話しながら進めてください。」
     </div>
@@ -324,19 +324,19 @@
     <div class="time-block">目安：30分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「次は、みんなの車の"心臓部"になる電池BOXを作ります。<br />
       まず、完成見本をよく見て、班で"どこが大事そうか"話してみましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「作りはじめてOKです。<br />
-      わからないところがあったら、班の中で相談してから、先生を呼んでください。」
+      わからないところがあったら、班の中で相談してから、指導員を呼んでください。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「電線がすぐ外れてしまうときは、<br />
       小さい磁石と銅線で電池の端子にはさみ、その上から銅テープでしっかり止めます。」
     </div>
@@ -355,31 +355,31 @@
     <div class="time-block">目安：25分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「電池BOXができた班から、LEDをつないでみましょう。<br />
       ピカッと光ったら大成功です！」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「つかないときは、もう一度チャレンジしてみましょう。<br />
       班みんなで、"どこが違うのかな？"と話し合うのも大事な時間です。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「ここで、この道具に名前をつけましょう。<br />
       もとの名前は"LED＝電池プラマイ判定機"...ちょっと長くて、かっこよくありませんね。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「ヒントは"光る"と"プラマイ"。<br />
       班で1つ、名前を考えてみましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「今日のまとめです。<br />
       電気には向きがあること。LEDは一方通行のときだけ光ること。<br />
       そして、みんなの手で電池BOXが完成したこと。<br />
@@ -408,19 +408,19 @@
     <div class="time-block">目安：10分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「おはようございます。2日目のスタートです。<br />
       まずは、昨日の復習から始めましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「モーターは、つなぐ電線の向きを逆にすると、回る向きも逆になります。<br />
       電気の向きが、動きの向きとつながっているんですね。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「絶縁と短絡のクイズも少しだけやってみましょう。<br />
       "くっつけていいところ"と"くっつけてはいけないところ"、思い出せますか？」
     </div>
@@ -434,26 +434,26 @@
     <div class="time-block">目安：45分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「ここからは、みんなの車を動かす"リモコンスイッチ"を作ります。<br />
       材料を取りに行きましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「スイッチは、ボタンを押すことで電気の流れる道を切り替えるしくみです。<br />
       左のボタンと右のボタンで、プラスとマイナスの向きが入れ替わります。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「作っている途中で、<br />
       "本当に電気の道が変わっているかな？"と思ったら、<br />
       ひかる！プラマイチェッカーをつないで、光り方を見てみましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「うまく動かないときは、まず銅テープを見てください。<br />
       少しでも浮いていると、電気が通りにくくなります。<br />
       押さえて、しっかり接触するようにしましょう。」
@@ -473,21 +473,21 @@
     <div class="time-block">目安：35分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「いよいよ、みんなの"愛車"になる車体を作ります。<br />
       段ボールの大きさは、決められた範囲の中なら自由です。<br />
       どんな形にするか、まず班で相談してみましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「タイヤとシャフト、モーターを取り付けていきます。<br />
       タイヤが斜めについていると、走りが安定しません。<br />
       横から見て、まっすぐになっているか確認してみましょう。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「電線は、ねじれたり、ひっぱられ過ぎたりしないように気をつけましょう。<br />
       動く部分にひっかからないように、少し余裕をもたせるのがコツです。」
     </div>
@@ -506,26 +506,26 @@
     <div class="time-block">目安：20分</div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「では、スイッチと車体を電線でつないで、初めての走行テストをしてみましょう。<br />
       まずは、前に進むかどうかを確認します。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「もし、後ろ向きに走ってしまったら、<br />
       モーターについている2本の電線を入れ替えてみてください。<br />
       電気の向きが変わると、モーターの回る向きも変わります。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「まっすぐ走らない車は、タイヤの向きや、重さのバランスを少し調整してみましょう。<br />
       少しずつ直していくのも、大事な"ものづくり"の時間です。」
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「最後に、今日のまとめです。<br />
       電気の向き、スイッチのしくみ、それを使って自分だけのレスキューカーを作りました。<br />
       これは、世界にひとつだけの作品です。<br />
@@ -533,7 +533,7 @@
     </div>
 
     <div class="say">
-      <span class="label">先生</span>
+      <span class="label">指導員</span>
       「2日間、本当におつかれさまでした。<br />
       今日の"できた！"という気持ちを、次のチャレンジにも持っていってくださいね。」
     </div>
